...
        <Animated.View
          pointerEvents="none"
          style={[styles.openRow, styles.absoluteCenter, sOpenRow]}
          testID="auth-welcome-final-title"
        >
          <Text style={titleStyle} maxFontSizeMultiplier={1.35}>
            Open
          </Text>
          <Animated.View style={sSuffix}>
            <Text style={titleStyle} maxFontSizeMultiplier={1.35}>
              {" Social."}
            </Text>
          </Animated.View>
...
